# lab3-cnn

./: CMakeLists.txt  Lab3_CNN.ipynb  README.md
src/: Infer.cpp  Infer.h  Train.cpp  Train.h  main.cpp
src/cnn/: CREDITS.md  cnn.h  conv_layer_t.h  fc_layer.h  gradient_t.h  layer_t.h  optimization_method.h  point_t.h  pool_layer_t.h  relu_layer_t.h  tensor_t.h  types.h
src/utils/: io.cpp  io.h
